--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -70,7 +70,7 @@
     <div>
         <ul>
             <li>
-                <img src="/img/box 1.svg" alt="">
+                <img src="/img/box 1.svg" alt="" width="270">
             </li>
             <li>
                 <img src="/img/box 2.svg" alt="">
